# video-sort-ai

./: .gitignore  AGENTS.md  Cargo.toml  README.md  nodemon.json  package-lock.json  package.json
.github/workflows/: build.yml  push-tag.yml  release.yml
client/: App.tsx  EditApp.tsx  Wrapper.tsx  api.ts  index.css  index.tsx  state.tsx  types.ts  util.ts
client/components/: Clip.tsx  CookModal.tsx  Editor.tsx  FeedItem.tsx  FeedView.tsx  GridView.tsx  ListItem.tsx  ListView.tsx  Navbar.tsx  RangeSlider.tsx  TagEdit.tsx  TagSelect.tsx  Trimmer.tsx  Video.tsx  VideoModal.tsx
client/contexts/: state.ts  video.ts
client/hooks/: useIntersection.ts
docs/: .gitkeep
src/: common.rs  fmt.rs  http_handler.rs  index.html  main.rs  register.rs  util.rs
src/http_handler/: defs.rs  make_filter.rs  mod.rs  probe.rs  util.rs
src/http_handler/handlers/: cook.rs  delete_videos.rs  edit_video_metadata.rs  mod.rs  move_to_downloads.rs  probe_videos.rs  rename_tag.rs  restore_from_downloads.rs  serve_thumbnail.rs  serve_video.rs
src/http_handler/probe/: defs.rs  mod.rs
src/static/: 404.html  index.html
storage/downloads/: README.md
