[package]
name = "video-sort"
version = "0.3.0"
edition = "2024"

[dependencies]
futures-util = "0.3.31"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.16", features = ["full"] }
sanitize-filename = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.16"
urlencoding = "2.1.3"
